--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,13 @@
 [tox]
 env_list =
+    pytest
     answers
     flake8
     mypy
+
+[testenv:pytest]
+deps = pytest
+commands = pytest -v
 
 [testenv:answers]
 commands = python3.11 puzzles/answers.py
