--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,9 @@ deps = flake8
 commands = flake8 puzzles
 
 [testenv:mypy]
-deps = mypy
+deps =
+    mypy
+    pytest
 commands = mypy .
 
 [flake8]
