Tidy up, add some comments

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ env_list =
     pytest
     answers
     flake8
+    pylint
     mypy
 
 [testenv:pytest]
@@ -14,7 +15,11 @@ commands = python3.11 puzzles/answers.py
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 puzzles
+commands = flake8 puzzles/day14/day14.py
+
+[testenv:pylint]
+deps = pylint
+commands = pylint --rcfile tox.ini puzzles/**/*.py
 
 [testenv:mypy]
 deps =
@@ -23,4 +28,10 @@ deps =
 commands = mypy .
 
 [flake8]
-max-line-length = 120
+max-line-length = 100
+
+[pylint]
+load-plugins = pylint.extensions.mccabe
+disable = C0114,C0115,C0116
+max-complexity = 4
+ignore = template.py,day01.py,day02.py,day03.py,day04.py,day05.py,day06.py,day07.py,day08.py
