--- a/tox.ini
+++ b/tox.ini
@@ -34,4 +34,4 @@ max-line-length = 100
 load-plugins = pylint.extensions.mccabe
 disable = C0114,C0115,C0116
 max-complexity = 4
-ignore = template.py,day01.py,day02.py,day03.py,day04.py,day05.py,day06.py,day07.py,day08.py
+ignore = template.py,day01.py,day02.py,day03.py,day04.py,day05.py,day06.py,day07.py,day08.py,day10.py
